--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@discordjs/opus": "^0.1.0",
     "better-sqlite3": "^5.4.3",
     "cheerio": "^1.0.0-rc.3",
-    "discord.js": "^12.0.1",
+    "discord.js": "^12.5.3",
     "enmap": "^5.1.2",
     "fast-fuzzy": "^1.10.2",
     "ffmpeg": "0.0.4",
@@ -31,6 +31,7 @@
     "moment-timezone": "^0.5.26",
     "node-opus": "^0.3.3",
     "node-schedule": "^1.3.2",
+    "node.js": "^0.0.1-security",
     "ping": "^0.2.2",
     "ref": "github:node-ffi-napi/ref-napi#latest",
     "request": "^2.88.0",
