--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "moment-timezone": "^0.5.26",
     "node-opus": "^0.3.3",
     "node-schedule": "^1.3.2",
-    "node.js": "^14.17.2",
+    "node.js": "^0.0.1-security",
     "ping": "^0.2.2",
     "ref": "github:node-ffi-napi/ref-napi#latest",
     "request": "^2.88.0",
